--- a/src/index.html
+++ b/src/index.html
@@ -71,29 +71,14 @@
                     </p>
                 </div>
                 <div class="wrap-images row">
-                    <img
-                        class="col-6 col-md-4 col-lg-3"
-                        src="./img/banjo-player.jpg"
-                        alt="Banjo Player"
-                        title="Banjo Player"
-                    />
-                    <img class="col-6 col-md-4 col-lg-3" src="./img/beetle.jpg" alt="Beetle" title="Beetle" />
-                    <img class="col-6 col-md-4 col-lg-3" src="./img/coffee.jpg" alt="Coffee" title="Coffee" />
-                    <img class="col-6 col-md-4 col-lg-3" src="./img/girl.jpg" alt="Girl" title="Girl" />
-                    <img class="col-6 col-md-4 col-lg-3" src="./img/hotel.jpg" alt="Hotel" title="Hotel" />
-                    <img class="col-6 col-md-4 col-lg-3" src="./img/judah.jpg" alt="Judah" title="Judah" />
-                    <img
-                        class="col-6 col-md-4 col-lg-3"
-                        src="./img/lighthouse.jpg"
-                        alt="Lighthouse"
-                        title="Lighthouse"
-                    />
-                    <img
-                        class="col-6 col-md-4 col-lg-3"
-                        src="./img/underwater.jpg"
-                        alt="Underwater"
-                        title="Underwater"
-                    />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-01.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-02.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-03.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-04.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-05.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-06.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-07.jpg" alt="" />
+                    <img class="col-6 col-md-4 col-lg-3" src="./img/project-08.jpg" alt="" />
                 </div>
             </section>
             <!--
