--- a/src/index.html
+++ b/src/index.html
@@ -429,7 +429,7 @@
                                     placeholder="Message"
                                     required
                                 ></textarea>
-                                <input id="submit" type="submit" value="submit" />
+                                <button>submit</button>
                             </form>
                         </div>
                         <div class="col-12 col-md-6 col-lg-6 wrap-2">
